<resources>
    <string name="app_name">SMD-Assignment-1</string>
    <string name="tvSender_heading">SENDER</string>
    <string name="tvDetails_heading">DETAILS</string>
    <string name="etEmail_hint">Email</string>
    <string name="etFull_name">Full Name</string>
    <string name="contact_ninformation_hint">Contact\nInformation</string>
    <string name="country_hint">Country</string>
    <string name="address_hint">Address</string>
    <string name="btn_next">Next</string>
    <string name="tvreceiver_heading">Receiver</string>
    <string name="review_information">Review Information</string>
    <string name="name_column">Name</string>
    <string name="country_column">Country</string>
    <string name="address_column">Address</string>
    <string name="contact_info_column">Contact Info</string>
    <string name="name_info">Name</string>
    <string name="country_info">Country</string>
    <string name="address_info">Address</string>
    <string name="contact_info">Contact Info</string>
</resources>