<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".ReviewForm"
    android:background="@color/main_background_color"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_information"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="@dimen/review_information_padding"
        android:textSize="@dimen/review_information_text_size"
        android:layout_marginBottom="@dimen/ri_margin_bottom"
        android:layout_alignParentTop="true"
        android:id="@+id/tvReviewHeading"
        android:background="@drawable/tvmain_heading_background" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/whole_info_margin_top"
        android:layout_marginLeft="@dimen/whole_info_margin_left"
        android:layout_marginRight="@dimen/whole_info_margin_right">

        <LinearLayout
            android:id="@+id/llColumnsHeadings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/name_column"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/country_column"
                android:textColor="@color/black" />

            <!-- Third Component -->
            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/address_column"
                android:textColor="@color/black" />

            <!-- Fourth Component -->
            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/contact_info_column"
                android:textColor="@color/black" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/llSenderFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin_top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/name_info"
                android:id="@+id/tvSenderFullName"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvSenderCountry"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/country_info"
                android:textColor="@color/black" />

            <!-- Third Component -->
            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvSenderAddress"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:text="@string/address_info"
                android:inputType="textMultiLine"
                android:textColor="@color/black" />

            <!-- Fourth Component -->
            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvSenderContactInfo"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:text="@string/contact_info"
                android:inputType="textMultiLine"
                android:textColor="@color/black" />


        </LinearLayout>

    <ImageView
        android:layout_width="@dimen/arrow_width"
        android:layout_height="@dimen/arrow_height"
        android:src="@drawable/arrow"
        android:layout_marginTop="@dimen/arrow_margin_top"
        android:layout_marginLeft="@dimen/arrow_margin_left"
        />
        <LinearLayout
            android:id="@+id/llReceiverFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/receiver_margin_top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvReceiverFullName"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/name_info"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvReceiverCountry"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/country_info"
                android:textColor="@color/black" />

            <!-- Third Component -->
            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvReceiverAddress"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:text="@string/address_info"
                android:inputType="textMultiLine"
                android:textColor="@color/black" />

            <!-- Fourth Component -->
            <TextView
                android:layout_width="@dimen/heading_column_width"
                android:layout_height="wrap_content"
                android:id="@+id/tvReceiverContactInfo"
                android:layout_weight="1"
                android:textSize="@dimen/heading_column_text_size"
                android:gravity="center"
                android:text="@string/contact_info"
                android:inputType="textMultiLine"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fabAdd"
        android:src="@drawable/add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="@android:color/holo_red_light"
        android:layout_margin="@dimen/fab_margin"

        />
</RelativeLayout>